@@ -609,4 +609,5 @@
 	* Updated all ARM Make.def files to work with gcc 2.4.2 (However, there are
 	  still some build issues associated with that toolchain in use of arm-elf-objcopy
 	  -- see the TODO.txt list for details)
+	* Fix problems with Z16F compilation introduced with recent changes.
 
